--- a/PasswordManagerBlazor/Client/wwwroot/css/app.css
+++ b/PasswordManagerBlazor/Client/wwwroot/css/app.css
@@ -1,10 +1,19 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background: #f6f5f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Montserrat', sans-serif;
+    height: 100vh;
+    margin: -20px 0 50px;
 }
 
-h1:focus {
+/*h1:focus {
     outline: none;
 }
 
@@ -91,12 +100,12 @@ a, .btn-link {
 
         .menu-bar .nav-link:hover {
             background-color: #23262b;
-        }
+        }*/
 
 
 /*    Hmm--->*/
-/*  
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+  
+/*@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
 * {
