Add password + Index page frontend

--- a/PasswordManagerBlazor/Client/Pages/AddNewPassword.razor
+++ b/PasswordManagerBlazor/Client/Pages/AddNewPassword.razor
@@ -1,12 +1,17 @@
 ﻿@page "/password/add"
 @using PasswordManagerBlazor.Shared.Models;
 @inject NavigationManager navigationManager
-<h2>Add new entry</h2>
 
+<head>
+    <meta charset="UTF-8">
+    <link href="css/main.css" rel="stylesheet" />
+    <link href="css/alerts.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 <div class="container" id="container">
     <div class="form-container sign-in-container">
         <EditForm Model="@password" OnValidSubmit="@HandleValidSubmit">
-            <h1>Add new password</h1>
+            <h2>Add new password</h2>
             <br>
             <div class="form-group">
                 <InputText id="email" class="form-control" @bind-Value="@password.Email" placeholder="Login" />
@@ -23,7 +28,7 @@
             </div>
             <br>
             <div class="form-group">
-                <button type="submit" class="btn btn-success">Save</button>
+                <button>Submit</button>
             </div>
         </EditForm>
     </div>
