--- a/PasswordManagerBlazor/Client/Pages/UpdatePassword.razor
+++ b/PasswordManagerBlazor/Client/Pages/UpdatePassword.razor
@@ -1,13 +1,19 @@
 ﻿@inject NavigationManager navigationManager
 @page "/updated-password"
 
-<h2>Update this entry</h2>
+
+<head>
+    <meta charset="UTF-8">
+    <link href="css/main.css" rel="stylesheet" />
+    <link href="css/alerts.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
 <body>
     <div class="container" id="container">
         <div class="form-container sign-in-container">
             <EditForm Model="passwordModel" OnValidSubmit="HandleValidSubmit">
-                <h1>Edit existing details</h1>
+                <h2>Edit existing password details</h2>
                 <br>
                 <div class="form-group">
                     <InputText id="firstName" class="form-control" @bind-Value="passwordModel.Email" placeholder="Login" />
@@ -27,7 +33,7 @@
                 </div>
                 <br>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-success">Update</button>
+                    <button>Update</button>
                 </div>
             </EditForm>
         </div>
