--- a/PasswordManagerBlazor/Client/Pages/TokenValidator.razor
+++ b/PasswordManagerBlazor/Client/Pages/TokenValidator.razor
@@ -51,7 +51,7 @@
 
     private void NavigateToLogin()
     {
-        navigationManager.NavigateTo("login");
+        navigationManager.NavigateTo("/");
     }
 
 }
