Adding many changes, much important

--- a/PasswordManagerBlazor/Client/Pages/AddNewPassword.razor
+++ b/PasswordManagerBlazor/Client/Pages/AddNewPassword.razor
@@ -43,6 +43,9 @@
     </div>
 </div>
 
+#blazor-error-ui {
+    display: none;
+}
 @code {
     private PasswordModel password = new PasswordModel();
     private string strongPass = "we suggest";
