--- a/PasswordManagerBlazor/Client/Pages/Index.razor
+++ b/PasswordManagerBlazor/Client/Pages/Index.razor
@@ -20,10 +20,10 @@
         </label>
 
         <ul class="menu__box">
-            <li><a class="menu__item" href="/">My Passwords</a></li>
-            <li><a class="menu__item" href="duplicates">Duplicates</a></li>
-            <li><a class="menu__item" href="expired">Expired</a></li>
-            <li><a class="menu__item" href="logout">Logout</a></li>
+            <li><a class="menu__item" href="/index">My Passwords</a></li>
+            <li><a class="menu__item" href="/duplicates">Duplicates</a></li>
+            <li><a class="menu__item" href="/expired">Expired</a></li>
+            <li><a class="menu__item" href="/logout">Logout</a></li>
         </ul>
     </div>
     <br>
@@ -77,6 +77,11 @@
         </div>
     </div>
 </body>
+<style>
+    #blazor-error-ui {
+        display: none;
+    }
+</style>
 
     @code {
        
