--- a/PasswordManagerBlazor/Client/Pages/TokenValidator.razor
+++ b/PasswordManagerBlazor/Client/Pages/TokenValidator.razor
@@ -34,7 +34,11 @@
         </div>
     </div>
 </div>
-
+<style>
+    #blazor-error-ui {
+        display: none;
+    }
+</style>
 @code {
     private TokenValidatorModel tokenValidatorModel = new TokenValidatorModel();
 
