--- a/PasswordManagerBlazor/Client/Pages/UpdatePassword.razor
+++ b/PasswordManagerBlazor/Client/Pages/UpdatePassword.razor
@@ -48,7 +48,11 @@
         </div>
     </div>
     </body>
-
+<style>
+    #blazor-error-ui {
+        display: none;
+    }
+</style>
 @code {
     private PasswordModel passwordModel = new PasswordModel();
     private string strongPass = "we suggest"; // Przykład, powinieneś zaktualizować logikę generowania hasła
