--- a/PasswordManagerBlazor/Client/Pages/Duplicates.razor
+++ b/PasswordManagerBlazor/Client/Pages/Duplicates.razor
@@ -34,6 +34,12 @@
         }
     </div>
 
+
+    <style>
+        #blazor-error-ui {
+            display: none;
+        }
+    </style>
     <!-- Hamburger menu -->
     <div class="hamburger-menu">
         <input id="menu__toggle" type="checkbox" />
@@ -42,7 +48,7 @@
         </label>
 
         <ul class="menu__box">
-            <li><a class="menu__item" href="/">My Passwords</a></li>
+            <li><a class="menu__item" href="/index">My Passwords</a></li>
             <li><a class="menu__item" href="/duplicates">Duplicates</a></li>
             <li><a class="menu__item" href="/expired">Expired</a></li>
             <li><a class="menu__item" href="/logout">Logout</a></li>
