--- a/PasswordManagerBlazor/Client/Shared/MainLayout.razor
+++ b/PasswordManagerBlazor/Client/Shared/MainLayout.razor
@@ -20,7 +20,7 @@
                         </NavLink>
                     </li>
                     <li class="nav-item">
-                        <NavLink class="nav-link" href="registration">
+                        <NavLink class="nav-link" href="/user/registration">
                             <span class="oi oi-plus" aria-hidden="true"></span> Registration
                         </NavLink>
                     </li>
@@ -45,7 +45,7 @@
                         </NavLink>
                    </li>
                     <li class="nav-item">
-                        <NavLink class="nav-link" href="exipred">
+                        <NavLink class="nav-link" href="expired">
                             <span class="oi oi-list-rich" aria-hidden="true"></span> Exipred
                         </NavLink>
                    </li>
