Added authorization to the frontend and blocked pages that a non-logged-in user should not have access to. Added tests to the login and registration process

--- a/PasswordManagerBlazor/Client/Pages/AddNewPassword.razor
+++ b/PasswordManagerBlazor/Client/Pages/AddNewPassword.razor
@@ -1,5 +1,7 @@
 ﻿@page "/password/add"
+@using Microsoft.AspNetCore.Authorization;
 @using PasswordManagerBlazor.Shared.Models;
+@attribute [Authorize]
 @inject NavigationManager navigationManager
 
 <head>
