--- a/PasswordManagerBlazor/Client/Pages/UpdatePassword.razor
+++ b/PasswordManagerBlazor/Client/Pages/UpdatePassword.razor
@@ -1,5 +1,8 @@
 ﻿@inject NavigationManager navigationManager
 @page "/updated-password"
+@using Microsoft.AspNetCore.Authorization;
+@attribute [Authorize]
+
 
 
 <head>
